# crm

./: .coveragerc  .gitignore  AGENTS.md  Makefile  README.md  gen_docs_index.py  mrd-research.md  mrd.md  mrd1-1.md  mrd1.md  pyproject.toml
api/: __init__.py
cli/: main.py
codex/logs/: 2025-07-21-1038.md  2025-07-21-1709.md
crawler/: __init__.py
docs/: README.md  architecture.md
ingestion/: __init__.py
parser/: __init__.py
retrieval/: __init__.py
scheduler/: __init__.py
tests/test_api/: test_api.py
tests/test_cli/: test_main.py
tests/test_crawler/: test_crawler.py
tests/test_ingestion/: test_ingestion.py
tests/test_parser/: test_parser.py
tests/test_retrieval/: test_retrieval.py
tests/test_scheduler/: test_scheduler.py
